--- a/sub1_3.html
+++ b/sub1_3.html
@@ -51,13 +51,13 @@
                   </thead>
                   <tbody>
                     <tr>
-                      <th>Open</th><td>09:30</td><td>09:30</td><td colspan="3">09:30</td><td>09:30</td><td rowspan="3" class="subcolor_g">OFF</td>
+                      <th>Open</th><td>09:30</td><td>09:30</td><td colspan="3">09:30</td><td class="subcolor_p">09:30</td><td rowspan="3" class="subcolor_g">OFF</td>
                     </tr>
                     <tr>
                       <th class="subcolor_y">Lunch</th><td colspan="6" class="subcolor_g">13:00 - 14:00</td>
                     </tr>
                     <tr>
-                      <th>Close</th><td>18:30</td><td>21:30<p><span class="pursquare_solid">야간진료</span></p></td><td colspan="3">18:30</td><td>14:30</td>
+                      <th>Close</th><td>18:30</td><td>21:30<p><span class="pursquare_solid">야간진료</span></p></td><td colspan="3">18:30</td><td class="subcolor_p">14:30</td>
                     </tr>
                   </tbody>
                 </table>
@@ -77,8 +77,8 @@
                   <dt>도로명 주소</dt>
                   <dd>서울특별시 노원구 동일로215길 2 하나빌딩 8층</dd>
                   <dt>주차 및 교통 안내</dt>
-                  <dd><p>자가용 이용 시 건물 내 주차장 이용 가능</p>
-                    <p>지하철 이용 시 7호선 노원역 6번 출구 도보 4분</p></dd>
+                  <dd><p><strong>자가용 이용 시</strong> 건물 내 주차장 이용 가능</p>
+                    <p><strong>지하철 이용 시</strong> 7호선 노원역 6번 출구 도보 4분</p></dd>
                 </dl>
               </div>
               <div class="right pbt100">
