--- a/sub2_2.html
+++ b/sub2_2.html
@@ -38,10 +38,10 @@
         </div>
 
         <div id="main" class="main-wrap subpage sub2_2">
-          <div class="maintitwrap centertxt mbcon50 wpc">
+          <div class="maintitwrap centertxt wpc">
             <h2 class="maintit mb30">연세리안 멸균 소독시스템</h2>
             <div class="txt">
-              <p>치과에서 사용하는 모든 기구들은 환자분들의 체액, 혈액 등이 직접 닿기 때문에 환자와 환자 사이에 발생할 수 있는 2차 감염에 대한 철저한 주의, 관리가 필요합니다. </p>
+              <p>치과에서 사용하는 모든 기구들은 환자분들의 체액, 혈액 등이 직접 닿기 때문에 환자와 환자 사이에 발생할 수 있는 2차 감염에 대한 철저한 주의, 관리가 필요합니다.<br> </p>
               <p>노원연세리안치과는 이러한 2차 감염에 대한 예방 및 관리를 위해 WHO 국제 기준을 통과한 MD safe 감염관리 시스템 및 첨단 소독 장비를 도입하고</p>
               <p>모든 의료진에 대한 감염 관리 교육을 통해 안전한 의료 환경을 구축하고 있습니다.  </p>
             </div>
@@ -59,7 +59,7 @@
                   <h5 class="fsize20">CDC, WHO 의 엄격한 국제 기준에 따라 철저한 감염관리가 이루어지는 감염관리 전문 프로그램 RIMS를 도입하여 안전한 의료 환경을 구축하고 있습니다.</h5>
                 </div>
                 <div class="rims centertxt">
-                  <div class="titwrap">감염관리 전문 프로그램 RIMS 구성</div>
+                  <div class="titwrap">감염관리 전문 프로그램 <span class="mobr">RIMS 구성</span></div>
                   <div class="column4">
                     <div class="col">
                       <div class="imgbox2"><img src="./img/sub2/sub2_2_img03_1.png"></div>
