--- a/sub2_3.html
+++ b/sub2_3.html
@@ -38,7 +38,7 @@
         </div>
 
         <div id="main" class="main-wrap subpage sub2_3">
-          <div class="maintitwrap centertxt mbcon50 wpc">
+          <div class="maintitwrap centertxt wpc">
             <h2 class="maintit mb30">첨단 진료장비</h2>
             <div class="txt">
               <p>연세리안치과는 3D CT 의 디지털 진단 장비 등 다양한 첨단 장비를 이용하여</p>
