--- a/sub3_2.html
+++ b/sub3_2.html
@@ -49,9 +49,9 @@
                 <div class="txtwrap flex_vcenter">
                   <div class="tit titwrap"><h3><span class="subcolor_g">네비게이션 임플란트</span>란?</h3></div>
                   <div class="txt ">
-                    <p>3D CT 촬영을 통해 컴퓨터로 모의 수술 시뮬레이션을 한 뒤, 
-                      환자 맞춤형 수술형 가이드를 제작하고, 수술 시 구강에 장착하여 
-                      사전에 계획된 대로 수술을 진행함으로써 정확성과 안정성을 높이는 술식입니다.</p>
+                    <p>3D CT 촬영을 통해 컴퓨터로 모의 수술 시뮬레이션을 한 뒤,</p> 
+                    <p>환자 맞춤형 수술형 가이드를 제작하고, 수술 시 구강에 장착하여 </p>
+                    <p>사전에 계획된 대로 수술을 진행함으로써 정확성과 안정성을 높이는 술식입니다.</p>
                   </div>
                 </div>
                 <div class="imgwrap"><img src="./img/sub3/sub3_2_img01_1_1.jpg"></div>
@@ -70,12 +70,12 @@
                 <div class="col">
                   <div class="iconwrap"><p class="icon"></p></div>
                   <h5 class="subcolor_g">편안한<br>임플란트</h5>
-                  <div class="txt">최소 절개로 출혈, 부종, 통증의 최소화 전신 질환이 있는 고령환자분께 유리합니다</div>
+                  <div class="txt">최소 절개로 출혈, 부종, 통증의 최소화 전신 질환이 있는 <strong>고령환자분께 유리</strong>합니다</div>
                 </div>
                 <div class="col">
                   <div class="iconwrap"><p class="icon"></p></div>
                   <h5 class="subcolor_g">안정성</h5>
-                  <div class="txt">예상되는 최적의 위치에 식립함으로써 임플란트의 안정성 확보</div>
+                  <div class="txt">예상되는 <strong>최적의 위치에 식립</strong>함으로써 임플란트의 안정성 확보</div>
                </div>
               </div>
 
@@ -90,11 +90,11 @@
                   </div>
                   <div class="col right">
                     <div class="th mark">네비게이션 임플란트</div>
-                    <div>잇몸 절개 및 봉합 <strong>X</strong></div>
-                    <div>출혈과 붓기가 <strong>최소화</strong></div>
-                    <div>약 <strong>1 - 7일</strong> 소요하여 회복</div>
-                    <div>평균 <strong>3 - 5회</strong> 내원</div>
-                    <div><strong>60 - 90분</strong>의 수술시간<br>(무절개수술, 임시보철 기준)</div>
+                    <div><p>잇몸 절개 및 봉합 <strong>X</strong></p></div>
+                    <div><p>출혈과 붓기가 <strong>최소화</strong></p></div>
+                    <div><p>약 <strong>1 - 7일</strong> 소요하여 회복</p></div>
+                    <div><p>평균 <strong>3 - 5회</strong> 내원</p></div>
+                    <div><p><strong>60 - 90분</strong>의 수술시간</p><p>(무절개수술, 임시보철 기준)</p></div>
                   </div>
                </div>
                
