--- a/sub3_4.html
+++ b/sub3_4.html
@@ -44,7 +44,7 @@
           
           <section class="con1 mbcon">
             <div class="wpc">
-              <div class="imgwrap"><img src="./img/sub3/sub3_4_img01_1.png"></div>
+              <!-- <div class="imgwrap"><img src="./img/sub3/sub3_4_img01_1.png"></div> -->
               <div class="txtwrap flex_vcenter">
                 <div class="tit titwrap"><h3 class="mb30"><span class="subcolor_g">뼈이식 임플란트</span>란?</h3></div>
                 <div class="txt ">
@@ -54,7 +54,7 @@
               </div>
               <div class="scrolltab">
                 <ul class="flex_hcenter">
-                  <li><button class="on">뼈이식술</button></li><li><button>상악동 거상술</button></li><li><button>발치와 보존술</button></li>
+                  <li><a href="#cont1">뼈이식술</a></li><li><a href="#cont2">상악동 거상술</a></li><li><a href="#cont3">발치와 보존술</a></li>
                 </ul>
               </div>
             </div> 
@@ -63,8 +63,8 @@
           <section class="con2 mbcon">
             <div class="wpc">
               <div class="roundbox">
-                <div class="titwrap flexspace">
-                  <h3>잇몸뼈가 왜 파괴되나요?</h3>
+                <div class="titwrap flexspace scrollon">
+                  <h3 class="content_typing">잇몸뼈가 왜 파괴되나요?</h3>
                 </div>
                 <div class="content">
                   <div class="conttit_wrap flex">
@@ -97,7 +97,7 @@
                   </div>
 
                   <div class="conttit_wrap flex">
-                    <p class="conttit ">치아를 뽑은지 오래되어 뼈가 흡수된 경우</p>
+                    <p class="conttit "><span>치아를 뽑은지 오래되어 뼈가 흡수된 경우</span></p>
                     <p>치아가 없는 치조골은 시간이 지날수록 점점 위축되어 얇아진 형태를 갖게됩니다.</p>
                   </div>
 
@@ -135,7 +135,7 @@
             </div>
           </section>
 
-          <section class="con3 mbcon">
+          <section id="cont1" class="con3 mbcon scrollitem">
             <div class="wpc">
               <div class="gallerylist">
                 <div class="in">
@@ -191,7 +191,7 @@
             </div>
           </section>          
 
-          <section class="con4 mbcon">
+          <section id="cont" class="con4 mbcon scrollitem">
             <div class="wpc">
               <div class="gallerylist">
                 <div class="in">
@@ -280,7 +280,7 @@
             </div>
           </section>  
 
-          <section class="con5 mbcon">
+          <section id="cont3" class="con5 mbcon scrollitem">
             <div class="wpc">
               <div class="gallerylist">
                 <div class="in">
@@ -293,7 +293,7 @@
                       <p>잇몸이 내려앉아 형태가 좋지 않거나 음식물이 끼는 현상을 방지하기 위해 시행하는 술식으로 원래 내 잇몸의 형태를 유지하는 장점이 있습니다.</p></div>
                   </div>
 
-                  <div class="list column6 gallerylist2 mbcon">
+                  <div class="list column6 gallerylist2 mbcon con5_1">
                       <div class="imgwrap"><img src="./img/sub3/sub3_4_img09_1.jpg"><p class="after">01</p></div>
                       <div class="imgwrap"><img src="./img/sub3/sub3_4_img09_3.jpg"><p class="after">02</p></div>
                       <div class="imgwrap"><img src="./img/sub3/sub3_4_img09_3.jpg"><p class="after">03</p></div>
