--- a/sub3_8.html
+++ b/sub3_8.html
@@ -61,7 +61,7 @@
             <div class="wpc">
               <div class="tit titwrap centertxt mbcon">
                 <h3 class="subcolor_g mb30">임플란트 보험 적용 변경</h3>
-                <div class="txt">건강보험 적용 범위가 기존 만 70세 이상 건강보험 가입자 또는 피부양자에서 만 65세 이상으로 확대되었습니다.</div>
+                <div class="txt">건강보험 적용 범위가 기존 만 70세 이상 건강보험 가입자 또는 피부양자에서 <span class="subcolor_g"><strong>만 65세 이상</strong>으로 확대</span>되었습니다.</div>
               </div>
               <div class="content flex_hcenter chart1">
                 <div class="left">
@@ -74,7 +74,7 @@
                   </div>
                 </div>
                 <div class="right">
-                  <div class="flex_vcenter circlewrap">
+                  <div class="flex_vcenter circlewrap scrollon scrollscale">
                     <p class="value">30%</p>
                     <div class="intxt flex_hcenter">
                       <p class="txt1">현재본인부담금</p>
