--- a/sub3_9.html
+++ b/sub3_9.html
@@ -59,8 +59,8 @@
           <section class="con2 mbcon">
             <div class="wpc">
               <div class="roundbox">
-                <div class="titwrap flexspace">
-                  <h3>[국산] 덴티움 임플란트</h3>
+                <div class="titwrap flexspace scrollon">
+                  <h3 class="content_typing">[국산] 덴티움 임플란트</h3>
                 </div>
                 <div class="content">
                   <div class="conttit_wrap flex_vcenter">
@@ -106,7 +106,7 @@
                         <div class="col">
                           <div class="txtwrap">
                             <h6>04</h6>
-                            <p class="txt1 subcolor_g"><strong>국내 치과 의사들의
+                            <p class="txt1 subcolor_g"><strong>국내 치과 의사들의<br>
                               다선호 브랜드</strong></p>
                             <div class="txt2"><p>실제 사용해본 치과의사들의</p>
                               <p>만족도가 높은 제품입니다.</p></div>
@@ -125,8 +125,8 @@
           <section class="con3 mbcon">
             <div class="wpc">
               <div class="roundbox">
-                <div class="titwrap flexspace">
-                  <h3>[국산] 메가젠 임플란트</h3>
+                <div class="titwrap flexspace scrollon">
+                  <h3 class="content_typing">[국산] 메가젠 임플란트</h3>
                 </div>
                 <div class="content">
                   <div class="conttit_wrap column3 list">
@@ -180,8 +180,8 @@
           <section class="con4 mbcon">
             <div class="wpc">
               <div class="roundbox">
-                <div class="titwrap flexspace">
-                  <h3>[스위스산] 스트라우만 임플란트</h3>
+                <div class="titwrap flexspace scrollon">
+                  <h3 class="content_typing">[스위스산] 스트라우만 임플란트</h3>
                 </div>
                 <div class="content">
                   <div class="conttit_wrap column2">
