--- a/sub1_1.html
+++ b/sub1_1.html
@@ -85,7 +85,7 @@
                     <div class="tit">Respect</div>
                     <div class="subtit">환자에 대한 존중</div>
                   </div>
-                  <div class="txt">
+                  <div class="txt nobr_mo">
                     <p>환자의 건강하고 행복할 권리를 존중합니다.</p>
                     <p>환자분들의 통증과 불편에 귀 기울여,</p> 
                     <p>가장 편안한 방법으로 최선의 결과를 약속드립니다.</p></div>
@@ -96,7 +96,7 @@
                     <div class="tit">Reliable </div>
                     <div class="subtit">신뢰</div>
                   </div>
-                  <div class="txt">
+                  <div class="txt nobr_mo">
                     <p>진료는 환자와 의료진과의 약속입니다.</p>
                     <p>치료는 의료진을 믿는 환자의 마음과 신의를 지키는</p>
                     <p>의료진의 조화가 가장 중요합니다.</p> 
@@ -111,7 +111,7 @@
                     <div class="tit">Reference</div>
                     <div class="subtit">근거 중심의 진료</div>
                   </div>
-                  <div class="txt">
+                  <div class="txt nobr_mo">
                     <p>국내 5% 의 대학 병원 수련과정을 마친 전문의로서, </p>
                     <p>근거 중심의 진료와 검증된 재료, 첨단 진료 장비를 통해 </p> 
                     <p>정확하고 안전한 진료를 시행합니다.</p></div>
@@ -122,7 +122,7 @@
                     <div class="tit">Release</div>
                     <div class="subtit">통증의 완화</div>
                   </div>
-                  <div class="txt">
+                  <div class="txt nobr_mo">
                     <p>아프고 두려운 치과 치료이기에</p>
                     <p>연조직 마취제, 무통마취기, 아로마 테라피 등을 </p>
                     <p>이용하여 편안하고 아프지 않은 진료를 제공합니다.</p> 
@@ -134,7 +134,7 @@
                     <div class="tit">Return</div>
                     <div class="subtit">진정한 회복</div>
                   </div>
-                  <div class="txt">
+                  <div class="txt nobr_mo">
                     <p>치과 치료는 치아로서만 끝나는 것이 아닌, </p>
                     <p>잘 씹고 먹을 수 있는 즐거움, 환하게 웃을 수 있는 자신감, </p> 
                     <p>아름다운 미소로 우리 삶의 행복을 좌우합니다.</p></div>
@@ -144,7 +144,7 @@
           </div>
         </section>
         <section class="con3 flex_vcenter">
-          <div class="left txt20">
+          <div class="left txt20 nobr_mo">
             <p>보이지 않는 부분의 0.1mm의 오차를 극복하는</p>
             <p>섬세한 진료와 환자의 마음에 대한 세심한 돌봄으로</p>
             <p>환자분들의 구강 건강과 나아가</p>
