--- a/sub3_6.html
+++ b/sub3_6.html
@@ -47,11 +47,10 @@
               <div class="col">
                 <div class="imgwrap"><img src="./img/sub3/sub3_6_img01.jpg"></div>
                 <div class="txtwrap flex_vcenter">
-                  <div class="tit titwrap"><h3><span class="subcolor_g">발치즉시 임플란트</span>란?</h3></div>
+                  <div class="tit titwrap"><h3><span class="subcolor_g">앞니 심미 임플란트</span>란?</h3></div>
                   <div class="txt">
-                    <p>일반적인 임플란트는 발치한 이후 3개월 가량 지나고 식립합니다. </p>
-                    <p>그러나 최근에는 발치와 동시에 뼈이식을 동반하여 임플란트를 식립하는 발치 즉시 임플란트를 시행하는 경우가 많습니다. </p>
-                    <p>시간이 지나 뼈가 흡수되어 임플란트 하기가 안 좋아지는 경우를 방지하고, 임플란트 진행 기간을 줄일 수 있는 장점이 있습니다. </p>
+                    <p>앞니는 잇몸뼈와 살이 얇기 때문에 치아가 빠진 후 쉽게 위축되어 심미적으로 만들기가 쉽지 않습니다. </p>
+                    <p>섬세하고 정교한 발치 즉시 임플란트와 심미적인 지르코니아 크라운을 이용하여 내 치아보다 더 자연스러운 앞니 임플란트를 만드는 기술력으로 만족스러운 결과를 드립니다.  </p>
                   </div>
                 </div>
               </div>
