--- a/sub2_3.html
+++ b/sub2_3.html
@@ -47,7 +47,7 @@
           </div>
           <section class="con1 mbcon">
             <div class="wpc">
-              <div class="gallerywide">
+              <div class="gallerywide pb30">
                 <div class="col">
                   <div class="imgwrap"><img src="./img/sub2/sub2_3_img01_2.jpg"></div>
                   <div class="mark"><img src="./img/sub2/sub2_3_img01_1.jpg"></div>
