--- a/sub3_6.html
+++ b/sub3_6.html
@@ -67,7 +67,7 @@
                     <div class="right subcolor_g smalltxt">Anterior Aesthetic Implant</div>
                   </div>
 
-                  <div class="list2 column4 mb30">
+                  <div class="list2 column4">
                     <div class="col">
                       <div class="imgwrap"><img src="./img/sub3/sub3_6_img02_01_1.jpg"></div>
                     </div>
@@ -93,7 +93,7 @@
                     <div class="right subcolor_g smalltxt">Anterior Aesthetic Implant</div>
                   </div>
 
-                  <div class="list column2 mb30 gapborder listc">
+                  <div class="list column2 gapborder listc">
                     <div class="col">
                       <div class="imgwrap"><img src="./img/sub3/sub3_6_img02_02_1.jpg"></div>
                       <div class="imgwrap"><img src="./img/sub3/sub3_6_img02_02_2.jpg"></div>
