--- a/sub1_2.html
+++ b/sub1_2.html
@@ -129,8 +129,8 @@
                 <div class="txt20">
                   <p>첨단 진료에 소외된 곳에도 치료를 기다리는 많은 사람이 있습니다. </p>
                   <p>의료는 국경과 인종을 가리지 않고 제공될 수 있어야 합니다. </p>
-                  <p>장소를 가리지 않는, 아픈 환자에 대한 봉사는 의료가 지향하는,</p>
-                  <p>진정한 인간에 대한 존중이라고 믿습니다.</p>
+                  <p class="nobr_self">장소를 가리지 않는, 아픈 환자에 대한 봉사는 의료가 지향하는,</p>
+                  <p class="nobr_self">진정한 인간에 대한 존중이라고 믿습니다.</p>
                 </div>
                 <div class="foottxt">
                   <p>2018년 몽골 울란바토르 무료 진료 봉사</p>
