--- a/sub2_2.html
+++ b/sub2_2.html
@@ -39,7 +39,7 @@
 
         <div id="main" class="main-wrap subpage sub2_2">
           <div class="maintitwrap centertxt wpc">
-            <h2 class="maintit mb30">연세리안 멸균 소독시스템</h2>
+            <h2 class="maintit mb30"><span>연세리안</span> <span>멸균 소독시스템</span></h2>
             <div class="txt">
               <p>치과에서 사용하는 모든 기구들은 환자분들의 체액, 혈액 등이 직접 닿기 때문에 환자와 환자 사이에 발생할 수 있는 2차 감염에 대한 철저한 주의, 관리가 필요합니다.<br> </p>
               <p>노원연세리안치과는 이러한 2차 감염에 대한 예방 및 관리를 위해 WHO 국제 기준을 통과한 MD safe 감염관리 시스템 및 첨단 소독 장비를 도입하고</p>
@@ -58,7 +58,7 @@
                   <h3 class="mb30">MD safe 멸균관리시스템</h3>
                   <h5 class="fsize20">CDC, WHO 의 엄격한 국제 기준에 따라 철저한 감염관리가 이루어지는 감염관리 전문 프로그램 RIMS를 도입하여 안전한 의료 환경을 구축하고 있습니다.</h5>
                 </div>
-                <div class="rims centertxt">
+                <div class="rims centertxt mbcon50">
                   <div class="titwrap">감염관리 전문 프로그램 <span class="mobr">RIMS 구성</span></div>
                   <div class="column4">
                     <div class="col">
@@ -84,10 +84,6 @@
           </section>
 
           <section class="con2 mbcon">
-            <div class="wpc titwrap centertxt mbcon">
-              <h3 class="mb30">MD safe 멸균관리시스템</h3>
-              <h5 class="fsize20">CDC, WHO 의 엄격한 국제 기준에 따라 철저한 감염관리가 이루어지는 감염관리 전문 프로그램 RIMS를 도입하여 안전한 의료 환경을 구축하고 있습니다.</h5>
-            </div>
             <div class="wpc flexgallery_column2"> 
               <div class="col">
                 <div class="imgwrap"><img src="./img/sub2/sub2_2_img04_1.jpg"></div>
@@ -150,7 +146,7 @@
             </div>
             <div class="wpc gallerywide">
               <div class="wpc titwrap centertxt mbcon">
-                <h3 class="mb30">연세리안치과 12단계 소독 시스템</h3>
+                <h3 class="mb30"><span>연세리안치과</span> <span>12단계 소독 시스템</span></h3>
               </div>
               <div class="col">
                 <div class="imgwrap"><img src="./img/sub2/sub2_2_img05_01.jpg"></div>
