--- a/sub3_1.html
+++ b/sub3_1.html
@@ -38,7 +38,7 @@
 
         <div id="main" class="main-wrap subpage sub3_1">
           <div class="maintitwrap">
-            <h2 class="maintit">치주과 전문의의 특별한 임플란트</h2>
+            <h2 class="maintit"><span>치주과 전문의의</span> <span>특별한 임플란트</span></h2>
           </div>  
           <section class="con1 mbcon">
             <div class="semiwidegallery">
