--- a/sub3_4.html
+++ b/sub3_4.html
@@ -191,7 +191,7 @@
             </div>
           </section>          
 
-          <section id="cont" class="con4 mbcon scrollitem">
+          <section id="cont2" class="con4 mbcon scrollitem">
             <div class="wpc">
               <div class="gallerylist">
                 <div class="in">
@@ -264,7 +264,7 @@
                   <div class="titwrap centertxt">
                     <h3>상악동 거상술 임상 증례</h3>
                   </div>
-                  <div class="list column2 gapborder2 con4_2 gallerylist2 mbcon50">
+                  <div class="list column2 gapborder2 con4_2 gallerylist2">
                     <div class="col column2">
                       <div class="imgwrap"><img src="./img/sub3/sub3_4_img08_1.jpg"><p class="after">Before</p></div>
                       <div class="imgwrap"><img src="./img/sub3/sub3_4_img08_2.jpg"><p class="after">After</p></div>
@@ -293,7 +293,7 @@
                       <p>잇몸이 내려앉아 형태가 좋지 않거나 음식물이 끼는 현상을 방지하기 위해 시행하는 술식으로 원래 내 잇몸의 형태를 유지하는 장점이 있습니다.</p></div>
                   </div>
 
-                  <div class="list column6 gallerylist2 mbcon con5_1">
+                  <div class="list column6 gallerylist2 con5_1">
                       <div class="imgwrap"><img src="./img/sub3/sub3_4_img09_1.jpg"><p class="after">01</p></div>
                       <div class="imgwrap"><img src="./img/sub3/sub3_4_img09_3.jpg"><p class="after">02</p></div>
                       <div class="imgwrap"><img src="./img/sub3/sub3_4_img09_3.jpg"><p class="after">03</p></div>
