--- a/sub6_1.html
+++ b/sub6_1.html
@@ -78,13 +78,13 @@
                     </div>
                   </div>
 
-                  <div class="hr_primary mt50" ></div>
+                  <div class="hr_primary mt50 mb10" ></div>
 
                   <div class="con2_2" >
                     <div class="titwrap centertxt">
                       <h3>치료 전후</h3>
                     </div>
-                    <div class="list column2 lista half mb30 gapborder2  gapborder_bottom">
+                    <div class="list column2 lista half gapborder2  gapborder_bottom">
                       <div class="col flex gap">
                         <div class="imgwrap"><img src="./img/sub6/sub6_1_img04_1a.jpg"><p class="after">Before</p>
                         </div>
@@ -118,7 +118,7 @@
                   </div>
 
 
-                  <div class="hr_primary" ></div>
+                  <div class="hr_primary mb10" ></div>
 
                   <div class="con3_1" >
                     <div class="titwrap centertxt">
@@ -150,7 +150,7 @@
 
                   <div class="hr_primary" ></div>
  
-                  <div class="con2_2" >
+                  <div class="con3_2" >
                     <div class="titwrap centertxt">
                       <h3>치료 전후</h3>
                     </div>
@@ -162,7 +162,7 @@
                         </div>
                       </div>
                       <div class="col nohalf">
-                        <div class="imgwrap"><img src="./img/sub6/sub6_1_img06_3.jpg"><p class="after">Before</p>
+                        <div class="imgwrap"><img src="./img/sub6/sub6_1_img06_3.jpg"><p class="after">After</p>
                         </div>
                       </div> 
                     </div>
@@ -186,7 +186,7 @@
 
                   <div class="hr_primary" ></div>
  
-                  <div class="con2_2" >
+                  <div class="con4_2" >
                     <div class="titwrap centertxt">
                       <h3>치료 전후</h3>
                     </div>
