--- a/sub6_4.html
+++ b/sub6_4.html
@@ -50,8 +50,8 @@
                 <div class="tit titwrap mb30"><h3><span><strong class="subcolor_g">대한 턱관절교합학회 교육</strong>을</span><span>이수한 연세리안치과의 의료진이</span><span>함께합니다.</span></h3></div>
                 <div class="txt mb10">
                   <p>턱관절 질환은 치아의 맞물림, 교합 관계와 관련된</p>
-                  <p>턱 관절 디스크, 안면 근육 등 전반적인 구강 상태를</p>
-                  <p>고려햐여야 하는 치과 진료 분야입니다.</p>
+                  <p>턱 관절 디스크, 안면 근육 등 <strong>전반적인 구강 상태를</strong></p>
+                  <p><strong>고려햐여야 하는 치과 진료 분야</strong>입니다.</p>
                 </div>
                 <div class="txt">
                   <p>자신도 모르는 구강 악습관, 근육 뭉침, 교합의 문제에 대해 </p>
@@ -72,27 +72,27 @@
                       <h3>턱관절 질환의 진단 방법</h3>
                     </div>
                     <div class="list column5 mb30 gapborder">
-                      <div class="col flex_hcenter">
+                      <div class="col">
                         <div class="tit">step1</div>
                         <div class="tittxt">초진 및 설문</div>
                         <div class="txt"><p>병력 청취</p><p>스트레스 척도 검사</p></div>
                       </div>
-                      <div class="col flex_hcenter">
+                      <div class="col">
                         <div class="tit">step2</div>
                         <div class="tittxt">방사선 검사</div>
                         <div class="txt"><p>턱관절 파노라마</p><p>저선량 콘빔 CT</p></div>
                       </div>
-                      <div class="col flex_hcenter">
+                      <div class="col">
                         <div class="tit">step3</div>
                         <div class="tittxt">측두하악 검사</div>
                         <div class="txt"><p>턱관절의</p><p>움직임 확인</p></div>
                       </div>
-                      <div class="col flex_hcenter">
+                      <div class="col">
                         <div class="tit">step4</div>
                         <div class="tittxt">촉진 및 시진 검사</div>
                         <div class="txt"><p>통증 원인</p><p>분석</p></div>
                       </div>
-                      <div class="col flex_hcenter">
+                      <div class="col">
                         <div class="tit">step5</div>
                         <div class="tittxt">체계적인 진단 분류 및 치료법 제시</div>
                         <div class="txt"><p>DC/TMD를 통한</p><p>진단 및 치료방법 제시</p></div>
@@ -136,7 +136,7 @@
             <div class="fullimg"><img src="./img/sub6/sub6_4_img02.jpg"></div>
             <div class="wpc">
               <div class="txtwrap flex_vcenter">
-                <div class="tit titwrap mb30"><h3><span>연세리안치과에서는</span><span>턱관절 촬영에 특화된</span><span>전선량 CBCT를 사용하여</span><span>정밀한 턱관절 분석을 합니다.</span></h3></div>
+                <div class="tit titwrap mb30"><h3><span>연세리안치과에서는</span> <span>턱관절 촬영에 특화된</span> <span>전선량 CBCT를 사용하여</span> <span>정밀한 턱관절 분석을 합니다.</span></h3></div>
                 <div class="txt mb10">
                   <p>정밀하고 정확한 턱관절 촬영을 위한</p>
                   <p>전문 장비인 저선량 CBCT를 이용하여</p>
