--- a/sub4.html
+++ b/sub4.html
@@ -30,7 +30,7 @@
         <div class="maintop top_sub4">
           <div class="wpc flexwrap fnlnb">
             <div class="lnbtit flex_hcenter"><h1 class="fnlnbtit"></h1></div>
-            <div class="lnb no"> <!-- lnb사용시 no제거 -->
+            <div class="lnb"> <!-- lnb사용시 no제거 -->
               <ul class="sub4 fnsubmenu" data-cur="sub4_1"></ul>
             </div>
           </div>
